--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
     <ion-header>
       <ion-toolbar color="secondary">
         <ion-title  >
-          Tech Course
+          Tech Course Groupe 5
         </ion-title>
       </ion-toolbar>
     </ion-header>
